check_js_v5_ascii.txt
cargo :     Checking 
js_engine v0.1.0 (C:\U
sers\IJXP\Pictures\bro
wser\crates\js_engine)
At line:1 char:1
+ cargo check -p 
js_engine 2>&1 | 
Out-File -Encoding 
ascii check_js_v5_ ...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng js...ates\js_e    
ngine):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
warning: unused 
import: 
`ApiAccessControl`
  --> crates\js_engine
\src\interpreter.rs:13
:40
   |
13 | use crate::securi
ty::{SecurityContext, 
ApiAccessControl};
   |                  
                      
^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unu
sed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

warning: unused 
import: 
`std::sync::Arc`
  --> crates\js_engine
\src\http_client.rs:10
:5
   |
10 | use 
std::sync::Arc;
   |     
^^^^^^^^^^^^^^

error[E0308]: 
mismatched types
   --> crates\js_engin
e\src\js_runtime.rs:31
9:20
    |
319 |             if 
let 
JsValue::String(s) = 
json_str {
    |                 
   ^^^^^^^^^^^^^^^^^^ 
  -------- this 
expression has type 
`Value`
    |                 
   |
    |                 
   expected `Value`, 
found `JsValue`

warning: unused 
variable: `params`
   --> crates\js_engin
e\src\react.rs:691:32
    |
691 |     if let 
JsValue::Function { 
params, body, .. } = 
&factory {
    |                 
               ^^^^^^ 
help: try ignoring 
the field: `params: _`
    |
    = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: unused 
variable: `body`
   --> crates\js_engin
e\src\react.rs:691:40
    |
691 |     if let 
JsValue::Function { 
params, body, .. } = 
&factory {
    |                 
                      
 ^^^^ help: try 
ignoring the field: 
`body: _`

warning: unused 
variable: `reducer`
   --> crates\js_engin
e\src\react.rs:808:9
    |
808 |     let reducer 
= args.first();
    |         ^^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: `_reducer`

For more information 
about this error, try 
`rustc --explain 
E0308`.
warning: `js_engine` 
(lib) generated 5 
warnings
error: could not 
compile `js_engine` 
(lib) due to 1 
previous error; 5 
warnings emitted
